--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LoginActivity" android:label="@string/login_activity_name" />
+        <activity android:name=".SignupActivity" android:label="@string/signup_activity_name"></activity>
     </application>
 
 </manifest>
