--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pokeme">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,10 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" android:label="@string/login_activity_name" />
-        <activity android:name=".SignupActivity" android:label="@string/signup_activity_name"></activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/login_activity_name" />
+        <activity
+            android:name=".SignupActivity"
+            android:label="@string/signup_activity_name" />
+        <activity android:name=".DashboardActivity" android:label="@string/app_name"/>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
