--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,13 @@
         <activity
             android:name=".SignupActivity"
             android:label="@string/signup_activity_name" />
-        <activity android:name=".DashboardActivity" android:label="@string/app_name"/>
+        <activity
+            android:name=".DashboardActivity"
+            android:label="@string/app_name" />
+        <activity android:name=".NoteCreateActivity"
+            android:label="@string/create_new_note" />
+        <activity android:name=".TodoCreateActivity"
+            android:label="@string/create_new_todo"/>
     </application>
 
 </manifest>
