--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
 
     compile 'com.android.volley:volley:1.1.0'
     compile 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support:design:26.1.0'
 }
