--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".WelcomeActivity">
+        <activity android:name="SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,10 +27,14 @@
         <activity
             android:name=".DashboardActivity"
             android:label="@string/app_name" />
-        <activity android:name=".NoteCreateActivity"
+        <activity
+            android:name=".NoteCreateActivity"
             android:label="@string/create_new_note" />
-        <activity android:name=".CategoryCreateActivity"
-            android:label="@string/create_new_category"/>
+        <activity
+            android:name=".CategoryCreateActivity"
+            android:label="@string/create_new_category" />
+        <activity android:name=".WelcomeActivity"
+            android:label="@string/app_name"/>
     </application>
 
 </manifest>
