--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,5 +29,9 @@ dependencies {
 
     compile 'com.android.volley:volley:1.1.0'
     compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.google.firebase:firebase-core:12.0.0'
+    compile 'com.google.firebase:firebase-messaging:12.0.0'
     implementation 'com.android.support:design:26.1.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
